<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:padding="@dimen/eight_dp">

    <LinearLayout
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@color/colorPrimary"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@color/colorPrimaryDark"
            tools:text="Author" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/eight_dp"
                android:paddingStart="@dimen/two_dp"
                android:text="@string/euro" />

            <TextView
                android:id="@+id/book_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2B3D4D"
                tools:text="29.99" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/stock"
            android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:id="@+id/book_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#2B3D4D"
            tools:text="523" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/sale_button"
        android:padding="@dimen/four_dp"
        android:src="@drawable/ic_add_shopping_cart_white_24dp" />

</LinearLayout>