<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/sixteen_dp"
        tools:context=".DetailActivity">

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/author"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_title" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="@dimen/price_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_author" />

        <EditText
            android:id="@+id/edit_quantity"
            android:layout_width="@dimen/qty_width"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/quantity"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_price" />

        <EditText
            android:id="@+id/edit_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:ems="10"
            android:hint="@string/supplier_name"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_quantity" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/supplier_phone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_supplier" />

        <ImageButton
            android:id="@+id/minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:contentDescription="@string/subtract_one"
            android:src="@drawable/ic_exposure_neg_1_white_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/edit_quantity"
            app:layout_constraintEnd_toStartOf="@+id/edit_quantity"
            app:layout_constraintTop_toTopOf="@+id/edit_quantity" />

        <ImageButton
            android:id="@+id/plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:contentDescription="@string/add_one"
            android:src="@drawable/ic_plus_one_white_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/edit_quantity"
            app:layout_constraintStart_toEndOf="@+id/edit_quantity"
            app:layout_constraintTop_toTopOf="@+id/edit_quantity" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_phone_white_24dp"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_phone" />

        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintBottom_toTopOf="@+id/edit_quantity"
            app:layout_constraintStart_toEndOf="@+id/edit_price"
            app:layout_constraintTop_toTopOf="@+id/edit_price" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight_dp"
            android:text="@string/title"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_author"
            app:layout_constraintEnd_toStartOf="@+id/edit_title"
            app:layout_constraintTop_toTopOf="@+id/edit_title" />

        <TextView
            android:id="@+id/author_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight_dp"
            android:text="@string/author"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/edit_author"
            app:layout_constraintEnd_toStartOf="@+id/edit_author"
            app:layout_constraintTop_toTopOf="@+id/edit_author" />

        <TextView
            android:id="@+id/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight_dp"
            android:text="@string/price"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_quantity"
            app:layout_constraintEnd_toStartOf="@+id/edit_price"
            app:layout_constraintTop_toTopOf="@+id/edit_price" />

        <TextView
            android:id="@+id/quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:text="@string/quantity"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/edit_quantity"
            app:layout_constraintEnd_toStartOf="@+id/minus_button"
            app:layout_constraintTop_toTopOf="@+id/edit_quantity" />

        <TextView
            android:id="@+id/supplier_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight_dp"
            android:text="@string/supplier_text"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_phone"
            app:layout_constraintEnd_toStartOf="@+id/edit_supplier"
            app:layout_constraintTop_toTopOf="@+id/edit_supplier" />

        <TextView
            android:id="@+id/phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight_dp"
            android:text="@string/phone_text"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/edit_phone"
            app:layout_constraintEnd_toStartOf="@+id/edit_phone"
            app:layout_constraintTop_toTopOf="@+id/edit_phone" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
